bpo-24214: Fixed the UTF-8 and UTF-16 incremental decoders. * The UTF-8 incremental decoders fails now fast if encounter   a sequence that can't be handled by the error handler. * The UTF-16 incremental decoders with the surrogatepass error   handler decodes now a lone low surrogate with final=False.